# PowerBi

./: .gitignore  README.md  pyproject.toml
config/: workspace.yaml
queries/: ContainerPackageHierarchy.pq  ContainersHierarchy_API.pq  WeeklyContainerActivity.pq
report/: ContainerHierarchy.json  IMPLEMENTATION_GUIDE.md  dax_measures.dax  python_visuals_weekly_activity.py
src/pbi_tools/: __init__.py  cli.py  extractor.py  logger.py  reader.py  server.py  workspace.py
tests/: __init__.py  test_cli.py  test_extractor.py  test_reader.py  test_server.py  test_workspace.py
tests/fixtures/: sample.pbit
